fixed navbar alignment issue

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -2,11 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: transparent;
-    position: absolute;
-    z-index: 1;
+    background-color: black;
+    position: relative;
     width: 100%;
-    opacity: 0.8;
     img {
       width: 60px;
       height: auto;
